examples/test/testpolicy5586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5586
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key17: value25
      key18: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value18
      podSelector:
        matchLabels:
          key15: value21
          key26: value18
          key45: value42
